# 5DOFRobotArmV2

./: .gitignore  README.md
gui_workspace/: CMakeLists.txt  clienttypes.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagehandler.cpp  messagehandler.h  messagetypes.h  protocolconstants.h  protocolparser.cpp  protocolparser.h  robotarmclient.cpp  robotarmclient.h  teachpanel.cpp  teachpanel.h  teachpanel.ui
gui_workspace/assets/: Gripper.glb  Link_1.glb  Link_4.glb  robot3d.html
gui_workspace/assets/js/: animate.js  loadModels.js  robotMotions.js  setupScene.js
gui_workspace/assets/models/: Gripper_finger.glb  Link_2.glb  Link_3.glb
gui_workspace/cmake/: breeze.cmake
gui_workspace/communication/: messagehandler.cpp  messagehandler.h  messagetypes.h  protocolconstants.h  protocolparser.cpp  protocolparser.h
gui_workspace/core/: mainwindow.cpp  mainwindow.h  mainwindow.ui  robotarmclient.cpp  robotarmclient.h
gui_workspace/robot_arm_gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  robotarmclient.cpp  robotarmclient.h
gui_workspace/robot_arm_gui/cmake/: breeze.cmake
gui_workspace/ui/: robot3dview.cpp  robot3dview.h  teachpanel.cpp  teachpanel.h  teachpanel.ui
gui_workspace/ui/models/: positiontablemodel.cpp  positiontablemodel.h
python_workspace/: config.json  kinematics.py  main.py  message_handler.py  positions_db.py  protocol_constants.py  protocol_parser.py  requirements.txt  robot_class.py  saved_positions.db  saved_positions_handler.py  socket_server.py  tcp_message_handler.py  tcp_socket_server.py  test_socket_server.py  websocket_server.py
python_workspace/communication/tcp/: protocol_constants.py  protocol_parser.py  tcp_message_handler.py  tcp_socket_server.py
python_workspace/communication/websocket/: websocket_message_handler.py  websocket_protocol_constants.py  websocket_server.py
python_workspace/debug_tools/: cli_control.py  ping.py  servo_helper.py
python_workspace/robot_arm/: kinematics.py  physical_robot.py  robot_class.py  robot_core.py  robot_manager.py  saved_positions.db  simulation_robot.py
python_workspace/scservo_sdk/: port_handler.py  sms_sts.py
python_workspace/sms_sts/: ping.py  read.py  write.py
